--- a/PCAP_Preparation_Notebook_III.ipynb
+++ b/PCAP_Preparation_Notebook_III.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_III.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPA1QaW1y4BSniF3DdKPd51",
+      "authorship_tag": "ABX9TyM+jxiHC0rbgR6QoKX3IImJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -470,7 +470,7 @@
         "colab_type": "text"
       },
       "source": [
-        "What code would you insert into the commented line to obtain the output that reads:\n",
+        "Q7. What code would you insert into the commented line to obtain the output that reads:\n",
         "a\n",
         "b\n",
         "c\n",
@@ -526,6 +526,114 @@
             "a\n",
             "b\n",
             "c\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jDzQcwHHeESy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q8. The following snippet:\n",
+        "\n",
+        "def func(a,b):\n",
+        "\n",
+        "  return a ** a\n",
+        "  \n",
+        "print(func(2))\n",
+        "\n",
+        "1. will output 2\n",
+        "2. **is erroneous**\n",
+        "3. will return None\n",
+        "4. will output 4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LcXQ4dmEfKWJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "a7fce541-834c-430c-c8d2-8f235d618b56"
+      },
+      "source": [
+        "# The function will return an error. TypeError: func() missing 1 required positional argument: 'b'\n",
+        "def func(a,b):\n",
+        "  return a ** a\n",
+        "\n",
+        "print(func(2))"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-42-a785023f4267>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: func() missing 1 required positional argument: 'b'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HRJ8ki6gfdQF",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q9. The following snippet:\n",
+        "\n",
+        "def func1(a):\n",
+        "\n",
+        "  return a ** a\n",
+        "\n",
+        "def func2(a):\n",
+        "  return func1(a)*func1(a)\n",
+        "\n",
+        "print(func2(2))\n",
+        "\n",
+        "1. is erroneous\n",
+        "2. will output 2\n",
+        "3. will output 4\n",
+        "4. **will output 16** "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IYCMQ5jJfn4Z",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "caee3ccc-3f53-4162-9ec7-435b2c35a71a"
+      },
+      "source": [
+        "def func1(a):\n",
+        "  return a ** a\n",
+        "def func2(a): \n",
+        "  return func1(a)*func1(a)\n",
+        "\n",
+        "print(func2(2))"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "16\n"
           ],
           "name": "stdout"
         }
