III. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_III.ipynb
+++ b/PCAP_Preparation_Notebook_III.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_III.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM+jxiHC0rbgR6QoKX3IImJ",
+      "authorship_tag": "ABX9TyPa0Op99u/JtYsoYrxOSr9R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -634,6 +634,301 @@
           "output_type": "stream",
           "text": [
             "16\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "18CbM0vN_p7y",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q10. Which of the following lines properly starts a function using two parameters, both with zeroed default values?\n",
+        "\n",
+        "1. def fun(a=b=0):\n",
+        "2. fun fun(a,b=0):\n",
+        "3. fun fun(a=0,b):\n",
+        "4. **def fun(a=0,b=0)**: "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ITzYnHxcABEt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c0b9b73e-65d4-4110-a229-63bbcb0ae8ea"
+      },
+      "source": [
+        "def fun(a=0,b=0):\n",
+        "  return a, b\n",
+        "\n",
+        "x, y = fun()\n",
+        "print(x, y)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GGS0DFU9ATny",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q11. Which of the following statements is false?\n",
+        "1. The None value cannot be used as an argument of arithmetic operators\n",
+        "2. The None value can be assigned to variables\n",
+        "3. **The None value may not be used outside functions**\n",
+        "4. The None value can be compared with variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wWHbPybuAdmV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        },
+        "outputId": "98a8c28e-18e9-4780-8f34-dd7146ddb80a"
+      },
+      "source": [
+        "# The below returns TypeError: unsupported operand type(s) for +: 'int' and 'NoneType'\n",
+        "a = 10 + None\n",
+        "print(a)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-47-ec85be8b9fd0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'NoneType'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZkDyz5CPAuvX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d19d4389-0fe8-4deb-e8d5-03e62aad60e5"
+      },
+      "source": [
+        "a = None\n",
+        "print(None)"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wgwb9x08AyS-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e3647e02-027b-4c29-b3b8-ffdb9e719936"
+      },
+      "source": [
+        "# Using None value inside and outside functions\n",
+        "def fun():\n",
+        "  return None\n",
+        "\n",
+        "a = fun()\n",
+        "b = None\n",
+        "\n",
+        "print(a, b)"
+      ],
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "None None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zNgL775tA4qW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "734e4830-2dbc-4ab5-f660-609be69f5634"
+      },
+      "source": [
+        "# None used for comparing variables\n",
+        "a = None\n",
+        "if a == None:\n",
+        "  print(True)"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "H7R95FCOBnu5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q12. What is the output of the following snippet?\n",
+        "\n",
+        "def fun(x):\n",
+        "  \n",
+        "  if x % 2 == 0:\n",
+        "\n",
+        "    return 1\n",
+        "\n",
+        "  else:\n",
+        "\n",
+        "    return\n",
+        "\n",
+        "print(fun(fun(2)) + 1)\n",
+        "\n",
+        "1. **the code will cause a runtime error**\n",
+        "2. 1\n",
+        "3. None\n",
+        "4. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O5iGdVhKBTLT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "5df54e91-fdc6-458d-c990-f8c581cbd8e5"
+      },
+      "source": [
+        "def fun(x):\n",
+        "  if x % 2 == 0:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return\n",
+        "\n",
+        "print(fun(fun(2)) + 1)"
+      ],
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-52-4e779dc7a0c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'int'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AMfT41lXBxaR",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q13. What is the output of the following snippet?\n",
+        "\n",
+        "def fun(x):\n",
+        "\n",
+        "  global y\n",
+        "\n",
+        "  y = x * x\n",
+        "\n",
+        "  return y\n",
+        "\n",
+        "fun(2)\n",
+        "\n",
+        "print(y)\n",
+        "\n",
+        "1. 2\n",
+        "2. **4**\n",
+        "3. None\n",
+        "4. the code will cause a runtime error"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GUEXqbPYCFPZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "05d9e68b-c92c-4bcd-b4a1-8cf9ef2dc6dc"
+      },
+      "source": [
+        "def fun(x):\n",
+        "  global y\n",
+        "  y = x * x\n",
+        "  return y\n",
+        "\n",
+        "fun(2)\n",
+        "print(y)"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n"
           ],
           "name": "stdout"
         }
