IV. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_IV.ipynb
+++ b/PCAP_Preparation_Notebook_IV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_IV.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxSH8Vi74Vl9bzf6zyErPq",
+      "authorship_tag": "ABX9TyOI+MaVnfxBXUpejcklkp/8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -347,6 +347,111 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2oXfwTp51Jyr",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q8. Entering the try: block implies that:\n",
+        "1. the block will be omitted\n",
+        "2. all of the instructions from this block will be executed\n",
+        "3. **some of the instructions from this block may not be executed**\n",
+        "4. none of the instructions from this block will be executed"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l-hwtoVf1fpS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "d44adc78-038c-4b0e-9730-5e5ee415db89"
+      },
+      "source": [
+        "try:\n",
+        "  print(1)\n",
+        "  print(2/0)\n",
+        "  print(3)\n",
+        "except:\n",
+        "  print(4)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IeHJMPVd15We",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q9. The unnamed except: block:\n",
+        "1. **must be the last one**\n",
+        "2. cannot be used if any named block has been used\n",
+        "3. can be placed anywhere\n",
+        "4. must be the first one"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OIhcW1PM2_PX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "295e7d11-250a-4ca6-de12-b27dab83a50d"
+      },
+      "source": [
+        "# SyntaxError: default 'except:' must be last\n",
+        "try:\n",
+        "  print(1/0)\n",
+        "except:\n",
+        "  print(\"Last Block\")\n",
+        "except ArithmeticError:\n",
+        "  print(\"Arithmetic Error\")\n"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-27-81f7901492f3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(1/0)\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m default 'except:' must be last\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-sWEd0MW2v5j",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q10.The top‑most Python exception is named:\n",
+        "1. **BaseException**\n",
+        "2. Exception\n",
+        "3. TopException\n",
+        "4. PythonException"
       ]
     }
   ]
