IV. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_IV.ipynb
+++ b/PCAP_Preparation_Notebook_IV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_IV.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOI+MaVnfxBXUpejcklkp/8",
+      "authorship_tag": "ABX9TyOzlRoQBDh26AYInQaZCmgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,6 +452,133 @@
         "2. Exception\n",
         "3. TopException\n",
         "4. PythonException"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PsdarPe--3gk",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://raw.githubusercontent.com/raj-vijay/py/master/images/Exception%20Hierarchy.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OcUySDkR-7OY",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://raw.githubusercontent.com/raj-vijay/py/master/images/Exceptions.png)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v5FWENs6_EwK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q11. The following statement:\n",
+        "\n",
+        "assert var == 0\n",
+        "\n",
+        "1. **will stop the program when var != 0**\n",
+        "2. is erroneous\n",
+        "3. has no effect\n",
+        "4. will stop the program when var == 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O8xfaAEPCyZn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 248
+        },
+        "outputId": "909b60b7-15d3-41b0-b2fd-73a89ede56a5"
+      },
+      "source": [
+        "var = 5\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "  var -= 1\n",
+        "  print(i, var)\n",
+        "  # The assertion prevents the infinite loop as the program stops when var != 0\n",
+        "  assert var == 0\n",
+        "  \n",
+        "\n"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 4\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-8730e19e60fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# The assertion prevents the infinite loop as the program stops when var == 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fl-LA1RqE4mb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 282
+        },
+        "outputId": "fc76fcc8-2751-46b0-d931-c5fda564fa0a"
+      },
+      "source": [
+        "var = 5\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "  var -= 1\n",
+        "  print(i, var)\n",
+        "  # The assertion prevents the infinite loop as the program stops when var == 0\n",
+        "  assert var != 0"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 4\n",
+            "0 3\n",
+            "0 2\n",
+            "0 1\n",
+            "0 0\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-13-a06819778130>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# The assertion prevents the infinite loop as the program stops when var == 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
       ]
     }
   ]
