IV. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_IV.ipynb
+++ b/PCAP_Preparation_Notebook_IV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_IV.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzlRoQBDh26AYInQaZCmgD",
+      "authorship_tag": "ABX9TyMiJ4rBcUzxkaUczuYU97c2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -579,6 +579,205 @@
             "\u001b[0;31mAssertionError\u001b[0m: "
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CcJgw_K0MmEa",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q12. ASCII is:\n",
+        "1. a predefined Python variable name\n",
+        "2. a standard Python module name\n",
+        "3. a character name\n",
+        "4. **short for American Standard Code for Information Interchange**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lZkCqVoQMz4-",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q13. UTF‑8 is:\n",
+        "1. a synonym for “byte”\n",
+        "2. **a form of encoding Unicode code points**\n",
+        "3. the 9th version of the UTF standard\n",
+        "4. a Python version name"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D18tgVq4NMIn",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q14. UNICODE is a standard:\n",
+        "1. honored by the whole universe\n",
+        "2. for coding floating-point numbers\n",
+        "3. used by coders from universities\n",
+        "4. **like ASCII, but much more expansive**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k3ijdpwONYTQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q15. The following code\n",
+        "\n",
+        "x = ‘\\”\n",
+        "\n",
+        "print(len(x))\n",
+        "\n",
+        "prints:\n",
+        "1. **1**\n",
+        "2. 0\n",
+        "3. 3\n",
+        "4. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zGzCbJKRNnV8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "01a94c12-156c-4446-ab8f-a465769891ec"
+      },
+      "source": [
+        "x = '\\''\n",
+        "print(len(x))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "benfc1WyORfS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q16. The following code:\n",
+        "\n",
+        "print(ord(‘c’) – ord(‘a’))\n",
+        "\n",
+        "prints:\n",
+        "1. 3\n",
+        "2. **2**\n",
+        "3. 0\n",
+        "4. 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wRmFDnfjOguM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "413db335-7574-403c-9e09-6b6080e1860c"
+      },
+      "source": [
+        "print(ord('c') - ord('a'))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "POExm-zdPqD6",
+        "colab_type": "text"
+      },
+      "source": [
+        "![alt text](https://raw.githubusercontent.com/raj-vijay/py/master/images/Built-in.jpg)\n",
+        "\n",
+        "**ord(c)**\n",
+        "\n",
+        "Given a string representing one Unicode character, return an integer representing the Unicode code point of that character. For example, ord('a') returns the integer 97 and ord('€') (Euro sign) returns 8364. This is the inverse of chr()."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Xg_lxqlP78q",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q17. The following code\n",
+        "\n",
+        "print(chr(ord('z') – 2))\n",
+        "\n",
+        "prints:\n",
+        "\n",
+        "1. **x**\n",
+        "2. a\n",
+        "3. z\n",
+        "4. y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fyTe0izmQUvg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b1d0e42e-d19b-47f9-87d9-6d4daa4a905b"
+      },
+      "source": [
+        "print(chr(ord('z') - 2))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k-dn6l-4QeK8",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     }
   ]
