IV. PCAP Preparation Notebook: Google Colaboratory

--- a/PCAP_Preparation_Notebook_IV.ipynb
+++ b/PCAP_Preparation_Notebook_IV.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Notebook_IV.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiJ4rBcUzxkaUczuYU97c2",
+      "authorship_tag": "ABX9TyPY3KfugowrV9ttJPvGiau3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -777,7 +777,129 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "Q18. The following code\n",
+        "\n",
+        "print(3 * ‘abc’ + ‘xyz’)\n",
+        "\n",
+        "prints:\n",
+        "1. **abcabcabcxyz**\n",
+        "2. abcabcxyzxyz\n",
+        "3. xyzxyzxyzxyz\n",
+        "4. abcxyzxyzxyz"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P5WcEzxbRBuP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b1d028cf-5e81-4c33-9907-51b85d98f2ff"
+      },
+      "source": [
+        "print(3 * 'abc' + 'xyz')"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "abcabcabcxyz\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uwyri6qARH4j",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q19. The following code\n",
+        "\n",
+        "print(‘Mike’ > “Mikey”)\n",
+        "\n",
+        "prints:\n",
+        "1. 0\n",
+        "2. **False**\n",
+        "3. 1\n",
+        "4. True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V7v2Ei8IRUxw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8fa72325-1e0c-4c6c-f508-a24f2fe58b2a"
+      },
+      "source": [
+        "print('Mike' > 'Mikey')"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6qhVS9QCRZ-D",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q20. The following code:\n",
+        "\n",
+        "print(float(“1,3”))\n",
+        "\n",
+        "1. prints 1,3\n",
+        "2. prints 1.3\n",
+        "3. **raises a ValueError exception**\n",
+        "4. prints 13"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s2r1fXdSRks9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        },
+        "outputId": "2cf160a2-115f-40f1-d230-03750992ac72"
+      },
+      "source": [
+        "print(float('1,3'))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-01484b853a79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'1,3'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '1,3'"
+          ]
+        }
       ]
     }
   ]
